# Legend-Vault

./: .gitignore  LegendVault_Stress_Test_Report_v2.md  README.md  SECURITY.md  SOURCE_MANIFEST.json  apply-pre-export-hardening.yml  legend-vault-pre-export-hardening-manifest.json  legend-vault-validated-stack.patch  pyproject.toml  run-tests.sh
.github/workflows/: apply-pre-export-hardening.yml  bootstrap.yml  ci.yml
docs/: ARCHITECTURE.md  HISTORICAL_ARTIFACTS.md  PRE_EXPORT_READINESS.md  STATUS.md
fixtures/: README.md  legend_vault_verify_v0_1_1.py
schemas/: event.schema.json
src/legend_vault/: cli.py  core.py
tests/: test_synthetic_end_to_end.py  test_verifier_fault_injection.py
