[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "legend-vault"
version = "0.1.0"
description = "Raw-first archival importer, verifier, and diff tool for Legend Vault."
requires-python = ">=3.10"
authors = [{name = "Legend Vault"}]
dependencies = []

[project.scripts]
legend-vault = "legend_vault.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
